<resources>
    <string name="app_name">Composition</string>
    <string name="game_description">Правила игры: перед вами будет три фигуры, одна сверху и две
        снизу. В двух из них будут числа, необходимо чтобы сумма из двух нижних фигур была равно
        числу в верхней фигуре. Для этого нужно выбрать правильное число.
    Пример: в верхнем круге число 7, а в нижних фигурах знак вопроса и число 3. Значит вместо знака
        вопроса нужно вставить чило 4.</string>
    <string name="game_title">Состав числа</string>
    <string name="start_game">Начать игру</string>
    <string name="choose_level">Выберите уровень</string>
    <string name="test_level">Тестовый</string>
    <string name="easy">Легкий</string>
    <string name="easy_level">легкий</string>
    <string name="hard_level">Сложный</string>
    <string name="medium_level">Средний</string>
    <string name="timer">00:00</string>
    <string name="question_mark">\?</string>
    <string name="right_answers">Правильных ответов %s из %s необхоимых</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="game_over">Game Over</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="try_again">Попробовать снова</string>
    <string name="finish_game">Закончить игру</string>
    <string name="game_icon">game icon</string>
</resources>