<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/choose_level"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_level_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/test_level"
        android:textSize="16sp" />


    <Button
        android:id="@+id/btn_level_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/lime"
        android:text="@string/easy_level"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_level_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/yandex_yellow"
        android:text="@string/medium_level"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_level_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/red"
        android:layout_marginEnd="16dp"
        android:text="@string/hard_level"
        android:textSize="16sp" />


</LinearLayout>