<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.composition.presentation.GameViewModel" />
        <variable
            name="clickListener"
            type="com.example.composition.presentation.ClickListener" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@{viewModel.formattedTime}"
        android:textColor="@color/purple_700"
        android:textSize="26sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00"/>

    <Button
        android:id="@+id/button_finish_game"
        android:text="@string/finish_game"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_sum"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@drawable/pngegg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/tv_visible_number"
        app:numberAsText="@{viewModel.question.sum}"
        tools:text="1"
        style="@style/QuestionTextStyle"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_visible_number"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/teal_200"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/tv_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sum"
        app:numberAsText="@{viewModel.question.visibleNumber}"
        tools:text="7" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/QuestionTextStyle"
        android:text="@string/question_mark"
        android:layout_margin="16dp"
        android:background="@color/teal_200"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@id/tv_visible_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_visible_number"
        app:layout_constraintBottom_toBottomOf="@id/tv_visible_number"/>

    <TextView
        android:id="@+id/tv_option_1"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@{viewModel.question.options.get(0).toString()}"
        app:OnOptionClick="@{(option) -> viewModel.chooseAnswer(option)}"
        app:layout_constraintBottom_toTopOf="@id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@id/tv_option_5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/tv_option_2"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        app:OnOptionClick="@{(option) -> viewModel.chooseAnswer(option)}"
        android:text="@{viewModel.question.options.get(1).toString()}"
        app:layout_constraintBottom_toTopOf="@id/tv_option_5"
        app:layout_constraintEnd_toStartOf="@id/tv_option_3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/tv_option_1"
        tools:text="2"/>

    <TextView
        android:id="@+id/tv_option_3"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:text="@{viewModel.question.options.get(2).toString()}"
        app:OnOptionClick="@{(option) -> viewModel.chooseAnswer(option)}"
        app:layout_constraintBottom_toTopOf="@id/tv_option_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/tv_option_2"
        tools:text="3"/>

    <TextView
        android:id="@+id/tv_option_4"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@{viewModel.question.options.get(3).toString()}"
        app:OnOptionClick="@{(option) -> viewModel.chooseAnswer(option)}"
        app:layout_constraintBottom_toBottomOf="@id/tv_option_5"
        app:layout_constraintEnd_toStartOf="@id/tv_option_5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="4"/>

    <TextView
        android:id="@+id/tv_option_5"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@{viewModel.question.options.get(4).toString()}"
        app:OnOptionClick="@{(option) -> viewModel.chooseAnswer(option)}"
        app:layout_constraintBottom_toBottomOf="@id/tv_option_6"
        app:layout_constraintEnd_toStartOf="@id/tv_option_6"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/tv_option_4"
        tools:text="5"/>

    <TextView
        android:id="@+id/tv_option_6"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@{viewModel.question.options.get(5).toString()}"
        app:OnOptionClick="@{(option) -> viewModel.chooseAnswer(option)}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/tv_option_5"
        tools:text="6"/>

    <TextView
        android:id="@+id/tv_answer_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@{viewModel.progressAnswers}"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"
        app:layout_constraintTop_toBottomOf="@id/tv_visible_number"
        app:layout_constraintVertical_chainStyle="spread"
        app:tvAnswerProgress="@{viewModel.enoughCount}"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/progress_answers" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:max="100"
        app:progressBarColor="@{viewModel.enoughPercent}"
        android:progress="@{viewModel.percentOfRightAnswers}"
        android:secondaryProgress="@{viewModel.minPercent}"
        android:secondaryProgressTint="@android:color/background_dark"
        android:layout_width="0dp"
        android:layout_marginBottom="26dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_option_2"
        app:layout_constraintTop_toBottomOf="@id/tv_answer_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>